// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Curriculum Page Should render curriculum with no session 1`] = `
<div>
  <nav
    class="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand text-primary font-weight-bold"
        href="/"
      >
        C0D3
      </a>
      <div
        id="navbarNav"
      >
        <div
          class="navbar-nav collapse navbar-collapse"
        >
          <div
            class="navbar-nav collapse navbar-collapse"
          >
            <a
              class="nav-item nav-link"
              href="/curriculum"
            >
              Curriculum
            </a>
            <a
              class="nav-item nav-link"
              href="https://github.com/garageScript/c0d3-app"
              rel="noopener noreferrer"
              target="_blank"
            >
              Repo
            </a>
            <a
              class="nav-item nav-link"
              href="https://www.notion.so/Table-of-Contents-a83980f81560429faca3821a9af8a5e2"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn
            </a>
            <a
              class="nav-item nav-link"
              href="https://discord.com/channels/828783458469675019/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Community
            </a>
          </div>
        </div>
      </div>
      <div>
        <a
          class="btn btn-secondary border mr-3"
          href="/login"
        >
          Login
        </a>
        <a
          class="btn btn-secondary border mr-3"
          href="/signup"
        >
          Signup
        </a>
      </div>
    </div>
  </nav>
  <div
    class="container-md"
  >
    <div
      class="row"
    >
      <div
        class="alerts-container col-12"
      />
      <div
        class="col-xl-8 order-xl-0 order-1"
      >
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-0-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-0-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/5"
                  >
                    Foundations of JavaScript
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      10
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  A super simple introduction to help you get started!
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-1-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-1-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/2"
                  >
                    Variables & Functions
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      12
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  Learn how to solve simple algorithm problems recursively with the following exercises. 
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-2-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-2-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/1"
                  >
                    Arrays
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      11
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  These exercises will help you gain a better understanding of what it means for a data structure to be non-primitive.
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-3-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-3-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/4"
                  >
                    Objects
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      10
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  These exercises will test your understanding of objects, which includes linked lists and trees
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-4-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-4-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/24"
                  >
                    Front End Engineering
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      7
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  Create challenging front-end mini-projects and build an understanding of Web Development. Covers the last fundamental JavaScript concept: (Complex Objects)
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-5-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-5-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/3"
                  >
                    End To End
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      9
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  These exercises will help you build a strong understanding of how the web works.
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-6-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-6-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/29"
                  >
                    React, GraphQL, SocketIO
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      8
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  React and GraphQL Lessons
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-7-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-7-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/28"
                  >
                    JavaScript Algorithms
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      11
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  Problems that are commonly asked to test your JavaScript knowledge
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-8-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-8-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/25"
                  >
                    Trees
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      12
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  Tree problems with high difficulty
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-9-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-9-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/27"
                  >
                    General Algorithms
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      5
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  General Algorithm from interviews
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-xl-4"
      >
        <div
          class="d-xl-block"
        >
          <div
            class="bg-white mt-3"
          >
            <div
              class="container"
            >
              <img
                src="/assets/discordLogo.svg"
              />
              <div
                class="text-primary mt-n3 text-center"
              >
                <span
                  class="font-weight-bold"
                >
                  Error fetching data...
                </span>
                
              </div>
            </div>
            <div
              class="p-2"
            >
              <div
                class="discord-list"
              >
                <div
                  class="text-center font-weight-bold text-primary"
                />
              </div>
            </div>
            <a
              class="discord_link font-weight-bold text-white"
              href="https://discord.gg/c0d3"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="border border-primary text-center bg-white text-primary"
              >
                JOIN
              </div>
            </a>
          </div>
          <div
            class="progress-card__container d-flex card shadow-sm mt-3 bg-primary text-white p-2 border-0"
          >
            <div
              class="card-body"
            >
              <h4
                class="progress-card__title mt-3"
              >
                Join C0D3 now and start your software engineering journey!
              </h4>
              <div
                class="mt-3"
              >
                Join us on
                <a
                  class="progress-newuser__chatlink text-white"
                  href="https://discord.gg/c0d3"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Discord
                </a>
                to ask your questions.
                <p>
                  Start by setting up your development environment and then follow the lessons in the course.
                </p>
              </div>
              <a
                class="btn btn-light progress-card__button mt-2 text-primary"
                href="https://www.notion.so/Setup-Instructions-fc8f8fcc1376482ead839fa6b1034cb4#10ab6286f4d942c58bd330f68cb8cb95"
                rel="noopener noreferrer"
                target="_blank"
              >
                Setup Development Environment
              </a>
            </div>
          </div>
        </div>
        <div
          class="d-none d-xl-block"
        >
          <div
            class="announcement-card__container card shadow-sm mt-3 p-2 d-flex border-0"
          >
            <div
              class="card-body"
            >
              <h1
                class="announcement-card__title font-weight-bold"
              >
                General Announcements
              </h1>
              <div
                class="mt-3"
              >
                <p
                  class="announcement-card__subtitle font-weight-bold"
                >
                  Updates and Guidelines
                </p>
                <p
                  class="mt-4"
                >
                  To make space for other students on our servers, your account will be deleted after 30 days of inactivity.
                </p>
                <p
                  class="mt-4"
                >
                  Take each lesson challenge seriously and do them over and over again until you can solve them. With the exception End to End, all challenges are questions and exercises taken from real interviews.
                </p>
                <p
                  class="mt-4"
                >
                  These lessons will not only prepare you for interviews, but it will also help teach you the skills that you need to become an effective engineer.
                </p>
                <p
                  class="mt-4"
                >
                  After completing Foundations of JavaScript, Variables & Functions, Array, Objects, End to End, HTML/CSS/JavaScript, React/GraphQL/SocketIO, you will be ready to contribute to our codebase.
                </p>
              </div>
            </div>
          </div>
          <div
            class="additional-resources__container ml-4 d-flex flex-column justify-content-around"
          >
            <h1
              class="additional-resources__title font-weight-bold"
            >
              ADDITIONAL RESOURCES
            </h1>
            <a
              class="additional-resources_link mr-1"
              href="https://developer.mozilla.org/en-US/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <h2
                class="additional-resources__subtitle mr-0"
              >
                MDN Web Docs
              </h2>
            </a>
            <h3
              class="additional-resources__description"
            >
              The encyclopedia of web development
            </h3>
            <hr
              class="my-2"
            />
            <a
              class="additional-resources_link mr-1"
              href="https://javascript.info/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <h2
                class="additional-resources__subtitle"
              >
                The Modern JavaScript Tutorial
              </h2>
            </a>
            <h3
              class="additional-resources__description"
            >
              In-depth overview of javascript language
            </h3>
            <hr
              class="my-2"
            />
            <a
              class="additional-resources_link mr-1"
              href="https://missing.csail.mit.edu/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <h2
                class="additional-resources__subtitle "
              >
                The Missing Semester
              </h2>
            </a>
            <h3
              class="additional-resources__description"
            >
              Introduction to shell, git, vim, tmux and etc.
            </h3>
            <hr
              class="my-2"
            />
            <a
              class="additional-resources_link mr-1"
              href="https://teachyourselfcs.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <h2
                class="additional-resources__subtitle"
              >
                Teach Yourself Computer Science
              </h2>
            </a>
            <h3
              class="additional-resources__description"
            >
              Self-study guide
            </h3>
            <hr
              class="my-2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <footer
    class="mt-5 font-weight-light text-center pb-5 text-muted"
  >
    © Copyright 2020 GarageScript
    <br />
    All Rights Reserved
  </footer>
</div>
`;

exports[`Curriculum Page Should render with basic dummy data 1`] = `
<div>
  <nav
    class="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand text-primary font-weight-bold"
        href="/"
      >
        C0D3
      </a>
      <div
        id="navbarNav"
      >
        <div
          class="navbar-nav collapse navbar-collapse"
        >
          <div
            class="navbar-nav collapse navbar-collapse"
          >
            <a
              class="nav-item nav-link"
              href="/curriculum"
            >
              Curriculum
            </a>
            <a
              class="nav-item nav-link"
              href="https://github.com/garageScript/c0d3-app"
              rel="noopener noreferrer"
              target="_blank"
            >
              Repo
            </a>
            <a
              class="nav-item nav-link"
              href="https://www.notion.so/Table-of-Contents-a83980f81560429faca3821a9af8a5e2"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn
            </a>
            <a
              class="nav-item nav-link"
              href="https://discord.com/channels/828783458469675019/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Community
            </a>
            <div
              class="dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-none"
                type="button"
              >
                Admin
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="d-flex"
      >
        <a
          class="btn btn-secondary border overflow-hidden p-2 text-truncate"
          href="/profile/fakeusername"
        >
           fakeusername
        </a>
        <button
          class="btn border ml-2"
          style="color: rgb(41, 41, 41);"
        >
          Logout
        </button>
      </div>
    </div>
  </nav>
  <div
    class="container-md"
  >
    <div
      class="row"
    >
      <div
        class="alerts-container col-12"
      />
      <div
        class="col-xl-8 order-xl-0 order-1"
      >
        <div
          class="card shadow-sm mt-3 lesson-card__container_inprogress border-primary"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-0-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-0-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/5"
                  >
                    Foundations of JavaScript
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      10
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  A super simple introduction to help you get started!
                </p>
              </div>
            </div>
          </div>
          <div
            class="p-2 bg-primary"
          >
            <a
              class="lesson-card__button btn btn-light mr-2 my-1 text-primary"
              href="https://www.notion.so/garagescript/JS-0-Foundations-a43ca620e54945b2b620bcda5f3cf672"
              rel="noopener noreferrer"
              target="_blank"
            >
              Start Lesson
            </a>
            <a
              class="lesson-card__button btn bg-primary my-1 text-white border border-white"
              href="/curriculum/5"
            >
              View Challenges
            </a>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-1-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-1-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/2"
                  >
                    Variables & Functions
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      12
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  Learn how to solve simple algorithm problems recursively with the following exercises. 
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-2-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-2-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/1"
                  >
                    Arrays
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      11
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  These exercises will help you gain a better understanding of what it means for a data structure to be non-primitive.
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-3-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-3-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/4"
                  >
                    Objects
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      10
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  These exercises will test your understanding of objects, which includes linked lists and trees
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-4-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-4-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/24"
                  >
                    Front End Engineering
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      7
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  Create challenging front-end mini-projects and build an understanding of Web Development. Covers the last fundamental JavaScript concept: (Complex Objects)
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-5-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-5-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/3"
                  >
                    End To End
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      9
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  These exercises will help you build a strong understanding of how the web works.
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-6-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-6-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/29"
                  >
                    React, GraphQL, SocketIO
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      8
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  React and GraphQL Lessons
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-7-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-7-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/28"
                  >
                    JavaScript Algorithms
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      11
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  Problems that are commonly asked to test your JavaScript knowledge
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-8-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-8-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/25"
                  >
                    Trees
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      12
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  Tree problems with high difficulty
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-9-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-9-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/27"
                  >
                    General Algorithms
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      5
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  General Algorithm from interviews
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-xl-4"
      >
        <div
          class="d-xl-block"
        >
          <div
            class="bg-white mt-3"
          >
            <div
              class="container"
            >
              <img
                src="/assets/discordLogo.svg"
              />
              <div
                class="text-primary mt-n3 text-center"
              >
                <span
                  class="font-weight-bold"
                >
                  Error fetching data...
                </span>
                
              </div>
            </div>
            <div
              class="p-2"
            >
              <div
                class="discord-list"
              >
                <div
                  class="text-center font-weight-bold text-primary"
                />
              </div>
            </div>
            <a
              class="discord_link font-weight-bold text-white"
              href="https://discord.gg/c0d3"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="border border-primary text-center bg-white text-primary"
              >
                JOIN
              </div>
            </a>
          </div>
          <div
            class="progress-card__container d-flex card shadow-sm mt-3 bg-primary text-white p-2 border-0"
          >
            <div
              class="card-body"
            >
              <div
                class="progress-card__wrapper d-flex align-items-center"
              >
                <svg
                  viewBox="0 0 40 40"
                  width="65px"
                >
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="17"
                    stroke="#3a22b8"
                    stroke-width="4.5"
                  />
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="17"
                    stroke="#fff"
                    stroke-dasharray="0 100"
                    stroke-dashoffset="20"
                    stroke-width="4.5"
                  />
                  <g
                    class="circle-label"
                  >
                    <text
                      color="#fff"
                      fill="#fff"
                      style="font: sans-serif 10px bold 10px;"
                      x="15"
                      y="23"
                    >
                      0
                      <tspan
                        font-size="8px"
                      >
                        %
                      </tspan>
                    </text>
                  </g>
                </svg>
              </div>
              <h4
                class="progress-card__title mt-3"
              >
                You're off to a great start!
              </h4>
              <div
                class="mt-3"
              >
                Join us on
                <a
                  class="progress-newuser__chatlink text-white"
                  href="https://discord.gg/c0d3"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Discord
                </a>
                to ask your questions.
                <p>
                  Start by setting up your development environment and then follow the lessons in the course.
                </p>
              </div>
              <a
                class="btn btn-light progress-card__button mt-2 text-primary"
                href="https://www.notion.so/Setup-Instructions-fc8f8fcc1376482ead839fa6b1034cb4#10ab6286f4d942c58bd330f68cb8cb95"
                rel="noopener noreferrer"
                target="_blank"
              >
                Setup Development Environment
              </a>
            </div>
          </div>
        </div>
        <div
          class="d-none d-xl-block"
        >
          <div
            class="announcement-card__container card shadow-sm mt-3 p-2 d-flex border-0"
          >
            <div
              class="card-body"
            >
              <h1
                class="announcement-card__title font-weight-bold"
              >
                General Announcements
              </h1>
              <div
                class="mt-3"
              >
                <p
                  class="announcement-card__subtitle font-weight-bold"
                >
                  Updates and Guidelines
                </p>
                <p
                  class="mt-4"
                >
                  To make space for other students on our servers, your account will be deleted after 30 days of inactivity.
                </p>
                <p
                  class="mt-4"
                >
                  Take each lesson challenge seriously and do them over and over again until you can solve them. With the exception End to End, all challenges are questions and exercises taken from real interviews.
                </p>
                <p
                  class="mt-4"
                >
                  These lessons will not only prepare you for interviews, but it will also help teach you the skills that you need to become an effective engineer.
                </p>
                <p
                  class="mt-4"
                >
                  After completing Foundations of JavaScript, Variables & Functions, Array, Objects, End to End, HTML/CSS/JavaScript, React/GraphQL/SocketIO, you will be ready to contribute to our codebase.
                </p>
              </div>
            </div>
          </div>
          <div
            class="additional-resources__container ml-4 d-flex flex-column justify-content-around"
          >
            <h1
              class="additional-resources__title font-weight-bold"
            >
              ADDITIONAL RESOURCES
            </h1>
            <a
              class="additional-resources_link mr-1"
              href="https://developer.mozilla.org/en-US/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <h2
                class="additional-resources__subtitle mr-0"
              >
                MDN Web Docs
              </h2>
            </a>
            <h3
              class="additional-resources__description"
            >
              The encyclopedia of web development
            </h3>
            <hr
              class="my-2"
            />
            <a
              class="additional-resources_link mr-1"
              href="https://javascript.info/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <h2
                class="additional-resources__subtitle"
              >
                The Modern JavaScript Tutorial
              </h2>
            </a>
            <h3
              class="additional-resources__description"
            >
              In-depth overview of javascript language
            </h3>
            <hr
              class="my-2"
            />
            <a
              class="additional-resources_link mr-1"
              href="https://missing.csail.mit.edu/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <h2
                class="additional-resources__subtitle "
              >
                The Missing Semester
              </h2>
            </a>
            <h3
              class="additional-resources__description"
            >
              Introduction to shell, git, vim, tmux and etc.
            </h3>
            <hr
              class="my-2"
            />
            <a
              class="additional-resources_link mr-1"
              href="https://teachyourselfcs.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <h2
                class="additional-resources__subtitle"
              >
                Teach Yourself Computer Science
              </h2>
            </a>
            <h3
              class="additional-resources__description"
            >
              Self-study guide
            </h3>
            <hr
              class="my-2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <footer
    class="mt-5 font-weight-light text-center pb-5 text-muted"
  >
    © Copyright 2020 GarageScript
    <br />
    All Rights Reserved
  </footer>
</div>
`;

exports[`Curriculum Page Should render with lessonStatus data 1`] = `
<div>
  <nav
    class="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand text-primary font-weight-bold"
        href="/"
      >
        C0D3
      </a>
      <div
        id="navbarNav"
      >
        <div
          class="navbar-nav collapse navbar-collapse"
        >
          <div
            class="navbar-nav collapse navbar-collapse"
          >
            <a
              class="nav-item nav-link"
              href="/curriculum"
            >
              Curriculum
            </a>
            <a
              class="nav-item nav-link"
              href="https://github.com/garageScript/c0d3-app"
              rel="noopener noreferrer"
              target="_blank"
            >
              Repo
            </a>
            <a
              class="nav-item nav-link"
              href="https://www.notion.so/Table-of-Contents-a83980f81560429faca3821a9af8a5e2"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn
            </a>
            <a
              class="nav-item nav-link"
              href="https://discord.com/channels/828783458469675019/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Community
            </a>
            <div
              class="dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-none"
                type="button"
              >
                Admin
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="d-flex"
      >
        <a
          class="btn btn-secondary border overflow-hidden p-2 text-truncate"
          href="/profile/fakeusername"
        >
           fakeusername
        </a>
        <button
          class="btn border ml-2"
          style="color: rgb(41, 41, 41);"
        >
          Logout
        </button>
      </div>
    </div>
  </nav>
  <div
    class="container-md"
  >
    <div
      class="row"
    >
      <div
        class="alerts-container col-12"
      />
      <div
        class="col-xl-8 order-xl-0 order-1"
      >
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-0-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-0-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <span
                class="badge badge-pill badge-success float-right mt-2 mr-2 p-2 d-flex align-items-center"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  style="height: 15px;"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
                  />
                  <polyline
                    points="22 4 12 14.01 9 11.01"
                  />
                </svg>
                <span
                  class="mx-1"
                >
                  COMPLETED
                </span>
              </span>
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/5"
                  >
                    Foundations of JavaScript
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      10
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  A super simple introduction to help you get started!
                </p>
              </div>
              <a
                class="btn btn-sm bg-primary text-white float-right mb-2 mr-2"
                href="/review/5"
              >
                Review 
                <span>
                  0
                </span>
                 Submissions
              </a>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-1-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-1-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <span
                class="badge badge-pill badge-success float-right mt-2 mr-2 p-2 d-flex align-items-center"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  style="height: 15px;"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
                  />
                  <polyline
                    points="22 4 12 14.01 9 11.01"
                  />
                </svg>
                <span
                  class="mx-1"
                >
                  COMPLETED
                </span>
              </span>
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/2"
                  >
                    Variables & Functions
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      12
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  Learn how to solve simple algorithm problems recursively with the following exercises. 
                </p>
              </div>
              <a
                class="btn btn-sm bg-primary text-white float-right mb-2 mr-2"
                href="/review/2"
              >
                Review 
                <span>
                  0
                </span>
                 Submissions
              </a>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-2-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-2-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <span
                class="badge badge-pill badge-success float-right mt-2 mr-2 p-2 d-flex align-items-center"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  style="height: 15px;"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
                  />
                  <polyline
                    points="22 4 12 14.01 9 11.01"
                  />
                </svg>
                <span
                  class="mx-1"
                >
                  COMPLETED
                </span>
              </span>
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/1"
                  >
                    Arrays
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      11
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  These exercises will help you gain a better understanding of what it means for a data structure to be non-primitive.
                </p>
              </div>
              <a
                class="btn btn-sm bg-primary text-white float-right mb-2 mr-2"
                href="/review/1"
              >
                Review 
                <span>
                  0
                </span>
                 Submissions
              </a>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 lesson-card__container_inprogress border-primary"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-3-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-3-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/4"
                  >
                    Objects
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      10
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  These exercises will test your understanding of objects, which includes linked lists and trees
                </p>
              </div>
            </div>
          </div>
          <div
            class="p-2 bg-primary"
          >
            <a
              class="lesson-card__button btn btn-light mr-2 my-1 text-primary"
              href="https://www.notion.so/garagescript/JS-3-Objects-3df846eaf0404fe6b012208773063a04"
              rel="noopener noreferrer"
              target="_blank"
            >
              Start Lesson
            </a>
            <a
              class="lesson-card__button btn bg-primary my-1 text-white border border-white"
              href="/curriculum/4"
            >
              View Challenges
            </a>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-4-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-4-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/24"
                  >
                    Front End Engineering
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      7
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  Create challenging front-end mini-projects and build an understanding of Web Development. Covers the last fundamental JavaScript concept: (Complex Objects)
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-5-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-5-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/3"
                  >
                    End To End
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      9
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  These exercises will help you build a strong understanding of how the web works.
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-6-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-6-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/29"
                  >
                    React, GraphQL, SocketIO
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      8
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  React and GraphQL Lessons
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-7-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-7-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/28"
                  >
                    JavaScript Algorithms
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      11
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  Problems that are commonly asked to test your JavaScript knowledge
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-8-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-8-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/25"
                  >
                    Trees
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      12
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  Tree problems with high difficulty
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card shadow-sm mt-3 border-0"
        >
          <div
            class="d-flex p-2"
          >
            <img
              alt="js-9-cover.svg"
              class="align-self-center"
              height="165"
              src="/assets/curriculum/js-9-cover.svg"
              width="116"
            />
            <div
              class="lesson-card__description pl-4"
            >
              <div>
                <h4
                  class="lesson-card__title font-weight-bold mt-3"
                >
                  <a
                    class=""
                    href="/curriculum/27"
                  >
                    General Algorithms
                  </a>
                </h4>
                <div>
                  <div
                    class="d-inline-block mr-4"
                  >
                    <img
                      alt="icon-challenge"
                      class="mr-2"
                      src="/assets/curriculum/icons/icon-challenge.svg"
                    />
                    <span
                      class="lesson-card__icon-text"
                    >
                      5
                       CHALLENGES
                    </span>
                  </div>
                </div>
                <p
                  class="mt-2"
                >
                  General Algorithm from interviews
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-xl-4"
      >
        <div
          class="d-xl-block"
        >
          <div
            class="bg-white mt-3"
          >
            <div
              class="container"
            >
              <img
                src="/assets/discordLogo.svg"
              />
              <div
                class="text-primary mt-n3 text-center"
              >
                <span
                  class="font-weight-bold"
                >
                  Error fetching data...
                </span>
                
              </div>
            </div>
            <div
              class="p-2"
            >
              <div
                class="discord-list"
              >
                <div
                  class="text-center font-weight-bold text-primary"
                />
              </div>
            </div>
            <a
              class="discord_link font-weight-bold text-white"
              href="https://discord.gg/c0d3"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="border border-primary text-center bg-white text-primary"
              >
                JOIN
              </div>
            </a>
          </div>
          <div
            class="progress-card__container d-flex card shadow-sm mt-3 bg-primary text-white p-2 border-0"
          >
            <div
              class="card-body"
            >
              <div
                class="progress-card__wrapper d-flex align-items-center"
              >
                <svg
                  viewBox="0 0 40 40"
                  width="65px"
                >
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="17"
                    stroke="#3a22b8"
                    stroke-width="4.5"
                  />
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="17"
                    stroke="#fff"
                    stroke-dasharray="42 58"
                    stroke-dashoffset="20"
                    stroke-width="4.5"
                  />
                  <g
                    class="circle-label"
                  >
                    <text
                      color="#fff"
                      fill="#fff"
                      style="font: sans-serif 10px bold 10px;"
                      x="11"
                      y="23"
                    >
                      42
                      <tspan
                        font-size="8px"
                      >
                        %
                      </tspan>
                    </text>
                  </g>
                </svg>
              </div>
              <h4
                class="progress-card__title mt-3"
              >
                Keep up the great work!
              </h4>
              <div
                class="mt-3"
              >
                Join us on
                <a
                  class="progress-newuser__chatlink text-white"
                  href="https://discord.gg/c0d3"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Discord
                </a>
                to ask your questions.
                <p>
                  Start by setting up your development environment and then follow the lessons in the course.
                </p>
              </div>
              <a
                class="btn btn-light progress-card__button mt-2 text-primary"
                href="https://www.notion.so/Setup-Instructions-fc8f8fcc1376482ead839fa6b1034cb4#10ab6286f4d942c58bd330f68cb8cb95"
                rel="noopener noreferrer"
                target="_blank"
              >
                Setup Development Environment
              </a>
            </div>
          </div>
        </div>
        <div
          class="d-none d-xl-block"
        >
          <div
            class="announcement-card__container card shadow-sm mt-3 p-2 d-flex border-0"
          >
            <div
              class="card-body"
            >
              <h1
                class="announcement-card__title font-weight-bold"
              >
                General Announcements
              </h1>
              <div
                class="mt-3"
              >
                <p
                  class="announcement-card__subtitle font-weight-bold"
                >
                  Updates and Guidelines
                </p>
                <p
                  class="mt-4"
                >
                  To make space for other students on our servers, your account will be deleted after 30 days of inactivity.
                </p>
                <p
                  class="mt-4"
                >
                  Take each lesson challenge seriously and do them over and over again until you can solve them. With the exception End to End, all challenges are questions and exercises taken from real interviews.
                </p>
                <p
                  class="mt-4"
                >
                  These lessons will not only prepare you for interviews, but it will also help teach you the skills that you need to become an effective engineer.
                </p>
                <p
                  class="mt-4"
                >
                  After completing Foundations of JavaScript, Variables & Functions, Array, Objects, End to End, HTML/CSS/JavaScript, React/GraphQL/SocketIO, you will be ready to contribute to our codebase.
                </p>
              </div>
            </div>
          </div>
          <div
            class="additional-resources__container ml-4 d-flex flex-column justify-content-around"
          >
            <h1
              class="additional-resources__title font-weight-bold"
            >
              ADDITIONAL RESOURCES
            </h1>
            <a
              class="additional-resources_link mr-1"
              href="https://developer.mozilla.org/en-US/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <h2
                class="additional-resources__subtitle mr-0"
              >
                MDN Web Docs
              </h2>
            </a>
            <h3
              class="additional-resources__description"
            >
              The encyclopedia of web development
            </h3>
            <hr
              class="my-2"
            />
            <a
              class="additional-resources_link mr-1"
              href="https://javascript.info/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <h2
                class="additional-resources__subtitle"
              >
                The Modern JavaScript Tutorial
              </h2>
            </a>
            <h3
              class="additional-resources__description"
            >
              In-depth overview of javascript language
            </h3>
            <hr
              class="my-2"
            />
            <a
              class="additional-resources_link mr-1"
              href="https://missing.csail.mit.edu/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <h2
                class="additional-resources__subtitle "
              >
                The Missing Semester
              </h2>
            </a>
            <h3
              class="additional-resources__description"
            >
              Introduction to shell, git, vim, tmux and etc.
            </h3>
            <hr
              class="my-2"
            />
            <a
              class="additional-resources_link mr-1"
              href="https://teachyourselfcs.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <h2
                class="additional-resources__subtitle"
              >
                Teach Yourself Computer Science
              </h2>
            </a>
            <h3
              class="additional-resources__description"
            >
              Self-study guide
            </h3>
            <hr
              class="my-2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <footer
    class="mt-5 font-weight-light text-center pb-5 text-muted"
  >
    © Copyright 2020 GarageScript
    <br />
    All Rights Reserved
  </footer>
</div>
`;
